crates/runtime/tests/metadata/snapshots/integration__metadata__docs_order_by_location_desc.snap
---
source: crates/runtime/tests/metadata/mod.rs
expression: formatted
---
+-------------+---------------------------------------------------------------------------------------+
| document_id | location                                                                              |
+-------------+---------------------------------------------------------------------------------------+
| doc_10      | s3://spiceai-public-datasets/test_documents_partitioned/day=2022-03-15/data_0.parquet |
| doc_8       | s3://spiceai-public-datasets/test_documents_partitioned/day=2022-03-15/data_0.parquet |
| doc_9       | s3://spiceai-public-datasets/test_documents_partitioned/day=2022-03-15/data_0.parquet |
+-------------+---------------------------------------------------------------------------------------+
