crates/runtime/tests/metadata/snapshots/integration__metadata__docs_partition_filter_file_metadata.snap
---
source: crates/runtime/tests/metadata/mod.rs
expression: formatted
---
+-------------+------------------+---------------------------------------------------------------------------------------+
| document_id | filename         | location                                                                              |
+-------------+------------------+---------------------------------------------------------------------------------------+
| doc_1       | requirements.pdf | s3://spiceai-public-datasets/test_documents_partitioned/day=2022-01-01/data_0.parquet |
| doc_2       | arch_review.md   | s3://spiceai-public-datasets/test_documents_partitioned/day=2022-01-01/data_0.parquet |
+-------------+------------------+---------------------------------------------------------------------------------------+
