crates/runtime/tests/metadata/snapshots/integration__metadata__docs_partition_filter_metadata.snap
---
source: crates/runtime/tests/metadata/mod.rs
expression: formatted
---
+---------------------------------------------------------------------------------------+
| location                                                                              |
+---------------------------------------------------------------------------------------+
| s3://spiceai-public-datasets/test_documents_partitioned/day=2022-03-15/data_0.parquet |
| s3://spiceai-public-datasets/test_documents_partitioned/day=2022-03-15/data_0.parquet |
| s3://spiceai-public-datasets/test_documents_partitioned/day=2022-03-15/data_0.parquet |
+---------------------------------------------------------------------------------------+
