crates/runtime/tests/metadata/snapshots/integration__metadata__docs_partition_metadata_only_schema.snap
---
source: crates/runtime/tests/metadata/mod.rs
expression: "format!(\"{schema}\")"
---
Field { "day": Utf8 }, Field { "location": nullable Utf8 }
