crates/runtime/tests/metadata/snapshots/integration__metadata__docs_scalar_fn_metadata_schema.snap
---
source: crates/runtime/tests/metadata/mod.rs
expression: "format!(\"{schema}\")"
---
Field { "loc_upper": nullable Utf8 }
