crates/runtime/tests/metadata/snapshots/integration__metadata__docs_select_star.snap
---
source: crates/runtime/tests/metadata/mod.rs
expression: formatted
---
+-------------+------------------------------------------------------------------------------------------------+-------------+-------------------+---------------------+---------+-----------------------+--------+---------+---------------------+------------+---------------------------------------------------------------------------------------+
| document_id | doc_content                                                                                    | compression | compression_level | ingested_at         | method  | filename              | size   | _row_id | _row_commit_version | day        | location                                                                              |
+-------------+------------------------------------------------------------------------------------------------+-------------+-------------------+---------------------+---------+-----------------------+--------+---------+---------------------+------------+---------------------------------------------------------------------------------------+
| doc_1       | Project requirements specification v2.1 – outlines goals, milestones, and deliverables for Q1. | gzip        | 6                 | 2022-01-01T10:00:00 | api     | requirements.pdf      | 1234.5 | 1       | 1.0                 | 2022-01-01 | s3://spiceai-public-datasets/test_documents_partitioned/day=2022-01-01/data_0.parquet |
| doc_10      | Incident post-mortem for the Feb outage. Root cause: connection pool exhaustion.               | gzip        | 9                 | 2022-03-15T16:00:00 | stream  | postmortem_feb.md     | 6543.7 | 10      | 4.0                 | 2022-03-15 | s3://spiceai-public-datasets/test_documents_partitioned/day=2022-03-15/data_0.parquet |
| doc_2       | Meeting notes from the architecture review held on Jan 1.                                      | gzip        | 6                 | 2022-01-01T11:00:00 | api     | arch_review.md        | 2345.6 | 2       | 1.0                 | 2022-01-01 | s3://spiceai-public-datasets/test_documents_partitioned/day=2022-01-01/data_0.parquet |
| doc_3       |                                                                                                | none        | 0                 | 2022-01-02T09:00:00 | stream  | empty_placeholder.txt | 0.0    | 3       | 1.0                 | 2022-01-02 | s3://spiceai-public-datasets/test_documents_partitioned/day=2022-01-02/data_0.parquet |
| doc_4       | Quarterly financial summary with revenue breakdown by region.                                  | gzip        | 3                 | 2022-02-01T14:00:00 | webhook | q1_finance.xlsx       | 4567.8 | 4       | 2.0                 | 2022-02-01 | s3://spiceai-public-datasets/test_documents_partitioned/day=2022-02-01/data_0.parquet |
+-------------+------------------------------------------------------------------------------------------------+-------------+-------------------+---------------------+---------+-----------------------+--------+---------+---------------------+------------+---------------------------------------------------------------------------------------+
