crates/runtime/tests/metadata/snapshots/integration__metadata__docs_select_star_partition_filter.snap
---
source: crates/runtime/tests/metadata/mod.rs
expression: formatted
---
+-------------+------------------------------------------------------------------------------------------------+-------------+-------------------+---------------------+--------+------------------+--------+---------+---------------------+------------+---------------------------------------------------------------------------------------+
| document_id | doc_content                                                                                    | compression | compression_level | ingested_at         | method | filename         | size   | _row_id | _row_commit_version | day        | location                                                                              |
+-------------+------------------------------------------------------------------------------------------------+-------------+-------------------+---------------------+--------+------------------+--------+---------+---------------------+------------+---------------------------------------------------------------------------------------+
| doc_1       | Project requirements specification v2.1 – outlines goals, milestones, and deliverables for Q1. | gzip        | 6                 | 2022-01-01T10:00:00 | api    | requirements.pdf | 1234.5 | 1       | 1.0                 | 2022-01-01 | s3://spiceai-public-datasets/test_documents_partitioned/day=2022-01-01/data_0.parquet |
| doc_2       | Meeting notes from the architecture review held on Jan 1.                                      | gzip        | 6                 | 2022-01-01T11:00:00 | api    | arch_review.md   | 2345.6 | 2       | 1.0                 | 2022-01-01 | s3://spiceai-public-datasets/test_documents_partitioned/day=2022-01-01/data_0.parquet |
+-------------+------------------------------------------------------------------------------------------------+-------------+-------------------+---------------------+--------+------------------+--------+---------+---------------------+------------+---------------------------------------------------------------------------------------+
